--- a/home/programs/waybar/config
+++ b/home/programs/waybar/config
@@ -5,7 +5,7 @@
     "modules-center": ["clock"],
     "modules-right": ["backlight", "pulseaudio", "bluetooth", "network", "battery", "tray" ],
     "custom/arch": {
-      "format": "  ",
+      "format": "  ",
       "tooltip": false,
       "on-click": "wlogout"
     },
